HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/Assigned_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>