HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <label>DateofBirth</label>
    <type>Date</type>
</CustomField>