HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>