HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>