HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <label>Medical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>