HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/fields/Patient_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Patient External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>