HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Patient__c/recordTypes/Outpatient.recordType-meta.xml
<RecordType>
    <fullName>Outpatient</fullName>
    <active>true</active>
    <description>For patients visiting for consultations, not admitted.</description>
    <label>Outpatient</label>
</RecordType>